--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "semi": false,
   "arrowParens": "always",
   "singleQuote": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "endOfLine":"lf"
 }
