--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Matt Gambill",
   "private": true,
   "scripts": {
+    "dev2": "cross-env NODE_ENV=development node server/index.js",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
@@ -25,6 +26,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@tailwindcss/ui": "^0.1.3",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0"
