--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "@tailwindcss/ui": "^0.1.3",
     "bcryptjs": "^2.4.3",
+    "cookie-universal-nuxt": "^2.1.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.12.0"
