--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "cookie-universal-nuxt": "^2.1.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.12.0"
+    "nuxt": "^2.12.0",
+    "portal-vue": "^2.1.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
