--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.12.0",
-    "portal-vue": "^2.1.7"
+    "portal-vue": "^2.1.7",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
